# pen

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  STRUCTURE.md  auto.sh  linux_release_builder.sh
.github/workflows/: rust.yml
builders/: dev_install.sh  linux_release_builder.sh  macos_release_builder.sh
files/: core  install.sh  main.sh  pen  pen.sh  update.sh  updater.sh
files/linux/: install  install.sh
files/old/: install.sh  install_python_version.rs  test.ps1  update.sh
files/unix/: install.sh  install_2.sh  install_final.sh  main.sh  shell_helper.sh
files/unix/linux/: core  core.sha256
files/unix/macos/: core
files/windows/: main.bat
release_files/unix/: install.sh
release_files/unix/linux/: core  core.sha256
src/: config.rs  constants.rs  lib.rs  main.rs  old_utils.txt  py_install_algorithms.rs  utils.rs
src/commands/: activate_env.rs  add_packages.rs  create_env.rs  delete_env.rs  delete_py_version.rs  delete_python_version.rs  env_add.rs  env_init.rs  env_pkgs.rs  env_sync.rs  install_py_version.rs  install_python_version.rs  list_py_versions.rs  list_python_versions.rs  mod.rs  pen_activate.rs  pen_add.rs  pen_init.rs  pen_install.rs  pen_uninstall.rs  pen_update.rs  py_delete_version.rs  py_list_versions.rs  uninstall_pen.rs  update_pen.rs
src/env_utils/: config.rs  mod.rs  package.rs  virtual_env.rs
src/py_utils/: py_install_algo_v1.rs
src/server_side/: install.rs  update.rs
src/utils/: config.rs  error.rs  mod.rs  package.rs  path.rs  python.rs  utils.rs  virtual_env.rs
tests/: integration_test.rs
(+5 files in other folders)
