[package]
name = "pen"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "pen"
path = "src/main.rs"

[lib]
name = "pen"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
home = "0.5.9"
minreq = { version = "2.12.0", features = ["https", "json-using-serde"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
zip = "2.2.0"
